# neon_test

./: .envrc  .gitignore  Cargo.toml  build.sh  dev.sh  dist.sh  index.d.ts  index.js  package.json  run.sh
.github/workflows/: CI.yml
.yarn/releases/: yarn-3.2.3.cjs
demo/: demo.mjs  index.coffee  index.js
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
sh/: build.publish.sh  clippy.sh  dist.sh  gen.init.coffee  init.rs
src/: bin.rs  lib.rs  macro.rs  trait.rs
